--- a/ags/.config/ags/styles/_workspaces.scss
+++ b/ags/.config/ags/styles/_workspaces.scss
@@ -1,7 +1,6 @@
 @use "palette" as *;
 
 .workspace-pips {
-  spacing: 4px;
 }
 
 .pip {
